Added sotfware definition

--- a/EIETdeG.tex
+++ b/EIETdeG.tex
@@ -271,7 +271,16 @@
 {\cleardoublepage \thispagestyle{empty} \vspace*{\stretch{1}}%
 \begin{center} \em} {\end{center} \vspace*{\stretch{3}} }%
 \begin{dedication}%
-A quien desees dedicar este trabajo
+A mis padres \\ Ayarlen Ferrer y Marco Rodríguez. \\
+\bigskip
+
+A la memoria de mis abuelos \\
+Esperanza Merecuana y Francisco Ferrer.\\
+
+\bigskip
+\bigskip
+\bigskip
+Dónde quiera que se encuentren, por todo lo que hicieron por mi.\\ Eternamente gracias.
 \end{dedication}%
 
 %==================================================================
@@ -354,7 +363,7 @@ xvii, 144 pp.}
 %==================================================================
 \chapter{MARCO METODOLÓGICO}\label{CAP:met}
 %\markboth{Tu Primer Cap?tulo}{Tu Primer Cap?tulo}%
-%\input{ch3.tex}%
+\input{ch3.tex}%
 
 %==================================================================
 \chapter{DEFINICIÓN Y DESCRIPCIÓN DEL HARDWARE}\label{CAP:hard}
