--- a/acroni.tex
+++ b/acroni.tex
@@ -10,5 +10,5 @@
 	\item[] \textbf{WAN}: Wide Area Network, Red de área amplia
 	\item[] \textbf{ISO}: International Organization for Standardization, Organización Internacional de Normalización
 	\item[] \textbf{OSI}: Open System Interconnection, Interconexión de Sistemas Abiertos
-	
+	\item[] \textbf{GUI}: Grafic User Interface, Interfaz Gráfica de Usuario	
 \end{itemize}
