Revisión 04/01 Avances cap4

--- a/EIETdeG.tex
+++ b/EIETdeG.tex
@@ -361,19 +361,19 @@ xvii, 144 pp.}
 \input{ch2.tex}%
 
 %==================================================================
-\chapter{MARCO METODOLÓGICO}\label{CAP:met}
+%\chapter{MARCO METODOLÓGICO}\label{CAP:met}
 %\markboth{Tu Primer Cap?tulo}{Tu Primer Cap?tulo}%
-\input{ch3.tex}%
+%\input{ch3.tex}%
 
 %==================================================================
 \chapter{DEFINICIÓN Y DESCRIPCIÓN DEL HARDWARE}\label{CAP:hard}
 %\markboth{Tu Segundo Cap?tulo}{Tu Segundo Cap?tulo}%
-%\input{ch3.tex}%
+\input{ch3.tex}%
 
 %==================================================================
 \chapter{DEFINICIÓN Y DESCRIPCIÓN DEL SOFTWARE}\label{CAP:soft}
 %\markboth{Tu Segundo Cap?tulo}{Tu Segundo Cap?tulo}%
-%\input{ch4.tex}
+\input{ch4.tex}
 
 %==================================================================
 \chapter{PRUEBAS Y RESULTADOS}\label{CAP:exp}
