--- a/acroni.tex
+++ b/acroni.tex
@@ -11,4 +11,7 @@
 	\item[] \textbf{ISO}: International Organization for Standardization, Organización Internacional de Normalización
 	\item[] \textbf{OSI}: Open System Interconnection, Interconexión de Sistemas Abiertos
 	\item[] \textbf{GUI}: Grafic User Interface, Interfaz Gráfica de Usuario	
+	\item[] \textbf{NVS}: Non volatile Storage, Memoria no Volátil
+	\item[] \textbf{STA}: STA, Estación (Utilizado para WiFi)
+	\item[] \textbf{AP}: Access Point, Punto de Acceso
 \end{itemize}
