Avances en capitulo 2 ESP-Mesh

--- a/MRTG.bib
+++ b/MRTG.bib
@@ -49,7 +49,6 @@ journal = {Siemens Corporate Technology, Information and Communications}
     school    = {Universidad Tecnol\'ogico de Pereira},
     ?_type     = {Tecnichal thesis},
     year      = {2013},
-    Note = {Obtenido desde https://core.ac.uk/download/pdf/71397220.pdf , en agosto 2020}
 }
 
 @article{ScienceDirect,
@@ -58,4 +57,11 @@ year = {2016},
 pages = {331},
 title = {Development of {WiFi} Mesh Infrastructure for Internet of Things applications},
 journal = {Engineering Physics International Conference, EPIC 2016}
+}
+
+@online{ESP-MESH,
+	author = {Espressif Systems},
+	title = {ESP-MESH},
+	year = {2020},
+	url = {https://docs.espressif.com/projects/esp-idf/en/latest/esp32/api-guides/mesh.html\#mesh-introduction},
 }
