capítulo 4, excepto imagenes de GUI

--- a/EIETdeG.tex
+++ b/EIETdeG.tex
@@ -213,6 +213,9 @@
 
 \pagenumbering{roman}
 
+\setcounter{secnumdepth}{3} % para que ponga 1.1.1.1 en subsubsecciones
+\setcounter{tocdepth}{3} % para que ponga subsubsecciones en el indice
+
 \makeindex
 
 
@@ -280,7 +283,7 @@ Esperanza Merecuana y Francisco Ferrer.\\
 \bigskip
 \bigskip
 \bigskip
-Dónde quiera que se encuentren, por todo lo que hicieron por mi.\\ Eternamente gracias.
+Dónde quiera que se encuentren, por todo lo que hicieron por mi y mis hermanos.\\ Eternamente gracias.
 \end{dedication}%
 
 %==================================================================
@@ -300,7 +303,7 @@ Dónde quiera que se encuentren, por todo lo que hicieron por mi.\\ Eternamente g
 \textbf{Autor del Trabajo de Grado}
 
 \begin{large}
-\textbf{T?tulo del Trabajo de Grado}
+\textbf{Título del Trabajo de Grado}
 \end{large}
 \end{center}
 
