--- a/MRTG.bib
+++ b/MRTG.bib
@@ -39,8 +39,7 @@ journal = {Siemens Corporate Technology, Information and Communications}
 	title = {313-01-35},
 	year = {2007},
 	url = {http://www.electropedia.org/iev/iev.nsf/display?openform\&ievref=313-01-35},
-	Note = {Disponible en http://www.electropedia.org/iev/iev.nsf/
-		    display?openform\&ievref=313-01-35 , consultado en agosto 2020},
+	Note = {Consultado en diciembre 2020},
 }
 
 @masterthesis{DianaL,
@@ -61,7 +60,16 @@ journal = {Engineering Physics International Conference, EPIC 2016}
 
 @online{ESP-MESH,
 	author = {Espressif Systems},
-	title = {ESP-MESH},
+	title = {"Fundamentos de ESP-MESH"},
 	year = {2020},
 	url = {https://docs.espressif.com/projects/esp-idf/en/latest/esp32/api-guides/mesh.html\#mesh-introduction},
+	Note = {Consultado en diciembre 2020},
+}
+
+@online{FreeRTOS,
+	author = {FreeRTOS ORG},
+	title = {"Conceptos sobre el FreeRTOS"},
+	year = {2020},
+	url = {https://www.freertos.org/about-RTOS.html},
+	Note = {Consultado en diciembre 2020},
 }
