--- a/ch2.tex
+++ b/ch2.tex
@@ -1,11 +1,11 @@
 % !TeX spellcheck = es_ES
 % !TeX encoding = ISO-8859-1
 
-En este capítulo se documentarán los fundamentos sobre sistemas SCADA, Medidores de energía, Redes WiFi Malladas y el protocolo Modbus.
+En este capítulo se documentarán los fundamentos sobre Medidores de energía, Redes WiFi Malladas y el protocolo Modbus.
 
-\section{Sistema SCADA}
+%\section{Sistema SCADA}
 
-\subsection{Definición}
+%\subsection{Definición}
 
 \section{Fundamentos de medición consumo de energía eléctrica}
 
@@ -424,89 +424,3 @@ Este microcontrolador posee dos núcleos CPU que pueden ser individualmente contr
 	\item Sensor Hall.
 \end{itemize}
 
-
-
-\newpage
-
-Un ejemplo de tabla es
-
-\begin{table}
-  \centering
-\begin{tabular}{llr}
-
-Gnat  & per gram & 13.65 \\
-      & each     &  0.01 \\
-Gnu   & stuffed  & 92.50 \\
-Emu   & stuffed  & 33.33 \\
-Armadillo & frozen & 8.99 \\
-\bottomrule
-\end{tabular}
-
-  \caption{Otra tabla}\label{Tab:otra}
-\end{table}
-
-
-\begin{table}
-  \centering
-  \caption{Ejemplo}\label{Tab:producion}
-\begin{tabular}{llr}
-\toprule
-\multicolumn{2}{c}{Item} \\
-\cmidrule(r){1-2}
-Animal & Description & Price (\$) \\
-\midrule
-Gnat  & per gram & 13.65 \\
-      & each     &  0.01 \\
-Gnu   & stuffed  & 92.50 \\
-Emu   & stuffed  & 33.33 \\
-Armadillo & frozen & 8.99 \\
-\bottomrule
-\end{tabular}
-\end{table}
-
-\begin{table}
-	\centering
-	\caption{Ejemplo}\label{Tab:producion}
-	\begin{tabular}{lrrr}
-		\toprule
-		Character & Success & Detected & Recognized \\
-		\midrule
-0 & 1.0 & 12 & 12 \\
-1 & 1.0 & 7 & 7 \\
-2 & 1.0 & 14 & 14 \\
-3 & 1.0 & 11 & 11 \\
-4 & 1.0 & 11 & 11 \\
-5 & 1.0 & 10 & 10 \\
-6 & 1.0 & 14 & 14 \\
-7 & 1.0 & 12 & 12 \\
-8 & 1.0 & 12 & 12 \\
-9 & 1.0 & 15 & 15 \\
-A & 1.0 & 49 & 49 \\
-B & 1.0 & 18 & 18 \\
-C & 1.0 & 6 & 6 \\
-D & 1.0 & 13 & 13 \\
-E & 0.857 & 7 & 6 \\
-F & 1.0 & 10 & 10 \\
-G & 1.0 & 12 & 12 \\
-H & 1.0 & 6 & 6 \\
-I & 1.0 & 4 & 4 \\
-J & 1.0 & 4 & 4 \\
-K & 0.8 & 5 & 4 \\
-L & 1.0 & 2 & 2 \\
-M & 0.933 & 15 & 14 \\
-N & 1.0 & 3 & 3 \\
-O & 1.0 & 1 & 1 \\
-P & 1.0 & 3 & 3 \\
-Q & 0 & 0 & 0 \\
-R & 1.0 & 1 & 1 \\
-S & 1.0 & 1 & 1 \\
-T & 1.0 & 1 & 1 \\
-U & 1.0 & 4 & 4 \\
-V & 1.0 & 3 & 3 \\
-W & 1.0 & 2 & 2 \\
-X & 1.0 & 4 & 4 \\
-Y & 1.0 & 2 & 2 \\
-Z & 0 & 0 & 0 \\
-		\bottomrule
-	\end{tabular}
-\end{table}
