--- a/ch3.tex
+++ b/ch3.tex
@@ -1,15 +1,110 @@
+% !TeX encoding = ISO-8859-1
+% !TeX spellcheck = es_ES
 
-\section{Definición y Descripción del Hardware}
+\section{Definición del hardware}
 
-\subsection{Definición}
+Un sistema de adquisición y transmisión de datos orientado a medidores de energía, debe contar con varios elementos que, interconectados, lleven a un funcionamiento general.
 
-\subsection{Descripción}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\linewidth]{img/DiagramaGeneralHardware}
+	\caption{Diagrama general de los componentes del Hardware.}
+	\label{fig:diagramageneralhardware}
+\end{figure}
+
+Dicho sistema requiere de una interfaz de comunicación inalámbrica debido a la necesidad de interconectar los distintos dispositivos que formarán los nodos de la red que representaría la parte de transmisión. Si se desea extraer el contador de energía del medidor también requiere de una interfaz serial para interactuar con este, esta sería la parte ,de adquisición de los datos.
+
+Por último se requiere de una unidad controladora o cerebro para que se maneje el flujo de datos, el almacenamiento, tramas y demás rutinas necesarias para el correcto funcionamiento de las interfaces. Es de resaltar que tanto la interfaz de comunicación inalámbrica como la serial pueden funcionar como entradas y salidas de datos, para con la red y con el medidor, respectivamente. 
+
+\section{Descripción del hardware}
+
+\subsection{Interfaz de comunicación inalámbrica}
+
+La interfaz de comunicación inalámbrica es imprescindible para este sistema. Para construir una red mallada WiFi el equipo elegido como nodo de la red debe ser compatible con esta tecnología. El ESP32 tiene integrada una antena compatible con los protocolos 802.11 b/g/n y la circuitería necesaria para implementar y manejar este tipo de interfaz sin necesidad de otro dispositivo.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.4\linewidth]{img/ESP32Antenna}
+	\caption{Microcontrolador ESP32 con su antena WiFi integrada.}
+	\label{fig:esp32antenna}
+\end{figure}
+
+\subsection{Interfaz serial con el medidor}
+
+El sistema debe tener la capacidad de extraer los datos de un medidor de energía para luego ser compartidos con el resto de la red y con el cliente externo, esta interfaz se encarga de la extracción de los datos. \\
+
+Para lograr esto se debe interactuar con el medidor conectado mediante comunicación serial, en la búsqueda de la mayor compatibilidad del sistema con los medidores existentes y nuevos se crearon dos 
+
+
+Buscando tener la mayor compatibilidad con todos los tipos de medidores se plantea utilizar dos maneras de comunicarse con el medidor: Un bus serial y mediante la salida de calibración, con estas se cubriría la mayoría de los equipos.
+
+\subsubsection{Bus serial}
+
+Los medidores de energía con los que se busca compatibilidad en este apartado son los que manejan un protocolo Modbus en un bus serial RS485. Por esto se plantea utilizar un chip MAX345 que funcione como intermedio entre la comunicación serial del UART del microcontrolador y el bus de campo.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.4\linewidth]{img/MAX3485PinOut}
+	\caption{Diagrama de pines del encapsulado DIP8 para MAX3485.}
+	\label{fig:max3485pinout}
+\end{figure}
+
+El fabricante Espressif ofrece algunas sugerencias a la hora de trabajar con chip seriales para RS485, de igual forma el fabricante del chip nos ofrece un ejemplo de aplicación. Como se observa en la siguientes imágenes:
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\linewidth]{img/MAX3485Bus}
+	\caption{Configuración recomendada por el fabricante del chip.}
+	\label{fig:max3485bus}
+\end{figure}
+
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.1\linewidth]{img/EspressifMAX485}
+	\caption{Configuración recomendada por Espressif para el manejo de un chip MAX-485.}
+	\label{fig:espressifmax485}
+\end{figure}
+
+La implementación final es semejante a la recomendada por Espressif en \ref{fig:espressifmax485} pero colocando la resistencia RT de valor 150 Ohms como lo recomienda el fabricante del chip en \ref{fig:max3485bus}.\\
+
+Se colocó un condesador de  $100\;nF$ entre alimentación y tierra junto con el chip MAX3485 en un circuito impreso para poder ser utilizado en la implementación del prototipo del sistema, que se hará en una protoboard.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.4\linewidth]{img/MAX3485}
+	\caption{Circuito impreso con un condensador y el chip MAX3485 utilizada para la comunicación mediante el bus serial en los medidores necesarios.}
+	\label{fig:max3485}
+\end{figure}
 
 
 
+\subsubsection{Salida de calibración}
+
+La salida de calibración se utiliza en la fabricación de los medidores para verificar y corregir el parámetro de conversión de imp/kWh que tiene el equipo. Esta salida suele estar formada por un optoacoplador que envía un pulsos cada cierta fracción de kWh, estos pulsos se pueden captar desde la unidad controladora y aprovecharlos para extraer el conteo de energía. \\
+
+Pero se deben tener en cuenta dos cosas: el medidor puede tener una condición inicial de energía que no se captará y, de ocurrir una falla de alimentación se perderá la cuenta que se lleva si no se guarda de manera permanente. Ambos problemas se tratarán mediante el software y se explicará la solución propuesta más adelante.
+
+Para utilizar dicha salida se utiliza un transistor y una resistencia de pull-up para evitar dañar las entradas del microcontrolador con un voltaje o corriente mayor a la soportada.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\linewidth]{img/SeguidorEmisor}
+	\caption{Topología seguidor de emisor utilizada en la salida optoacoplada del medidor de energía.}
+	\label{fig:seguidoremisor}
+\end{figure}
 
 
+\subsection{Unidad controladora}
 
+La unidad controladora es la encargada de: gestionar el estado del nodo en la red mallada, recibir y transmitir los datos, controlar los periféricos para enviar el mensaje necesario a través de la interfaz serial al medidor y además de comunicarse enviar al exterior de la red mallada el resultado de esta adquisición de los datos.  
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.4\linewidth]{img/UnidadControladora}
+	\caption{Unidad controladora del sistema, tarjeta de desarrollo ESP32.}
+	\label{fig:unidadcontroladora}
+\end{figure}
 
+El cerebro de cada nodo tiene muchas tareas pero no todas se ejecutan al mismo tiempo, muchas dependen del nodo y de la configuración que se le de a este mediante el software. La forma de manejar de manera correcta las tareas en cada nodo será ilustrada en el siguiente capitulo.
 
